# oosc

./: CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Debug/oosc_autogen/: moc_predefs.h  mocs_compilation.cpp
Debug/oosc_autogen/5FNAHKE2JN/: moc_MidiPlayback.cpp  moc_MidiPlayback.cpp.d
Debug/oosc_autogen/6V5AQR5PHR/: moc_MidiPlaybackUI.cpp  moc_MidiPlaybackUI.cpp.d
Debug/oosc_autogen/AAIKG6ET7H/: moc_ChorusUIWrapper.cpp  moc_ChorusUIWrapper.cpp.d  moc_CompressorUIWrapper.cpp  moc_CompressorUIWrapper.cpp.d  moc_DelayUIWrapper.cpp  moc_DelayUIWrapper.cpp.d  moc_DistortionUIWrapper.cpp  moc_DistortionUIWrapper.cpp.d  moc_EffectUIWrapper.cpp  moc_EffectUIWrapper.cpp.d  moc_EqUIWrapper.cpp  moc_EqUIWrapper.cpp.d  moc_FlangerUIWrapper.cpp  moc_FlangerUIWrapper.cpp.d  moc_PhaserUIWrapper.cpp  moc_PhaserUIWrapper.cpp.d  moc_ReverbUIWrapper.cpp  moc_ReverbUIWrapper.cpp.d  moc_VibratoUIWrapper.cpp  moc_VibratoUIWrapper.cpp.d
Debug/oosc_autogen/BX3FNDA6G6/: moc_ChangeableParameter.cpp  moc_ChangeableParameter.cpp.d
Debug/oosc_autogen/E6HZ6BKMIH/: moc_FileIO.cpp  moc_FileIO.cpp.d
Debug/oosc_autogen/EWIEGA46WW/: qrc_qml.cpp
Debug/oosc_autogen/S75VM6WKXM/: moc_AKnob.cpp  moc_AKnob.cpp.d  moc_KeyboardControl.cpp  moc_KeyboardControl.cpp.d  moc_Knob.cpp  moc_Knob.cpp.d  moc_TextKnob.cpp  moc_TextKnob.cpp.d
Debug/oosc_autogen/UVLADIE3JM/: moc_MixerQmlWrapper.cpp  moc_MixerQmlWrapper.cpp.d
Debug/oosc_autogen/UVTBS7GAUY/: moc_ADataReceiver.cpp  moc_ADataReceiver.cpp.d  moc_ArrayDrawer.cpp  moc_ArrayDrawer.cpp.d  moc_LinearIndicator.cpp  moc_LinearIndicator.cpp.d  moc_PolarVectorscope.cpp  moc_PolarVectorscope.cpp.d
Debug/oosc_autogen/WGYDDRAMTN/: moc_ApplicationConfigQML.cpp  moc_ApplicationConfigQML.cpp.d
Debug/oosc_autogen/X36UPPIK33/: moc_ADSRController.cpp  moc_ADSRController.cpp.d  moc_AGeneratorControl.cpp  moc_AGeneratorControl.cpp.d  moc_GeneratorControl.cpp  moc_GeneratorControl.cpp.d  moc_GeneratorKnobsControl.cpp  moc_GeneratorKnobsControl.cpp.d  moc_LfoController.cpp  moc_LfoController.cpp.d  moc_SubGeneratorControl.cpp  moc_SubGeneratorControl.cpp.d  moc_SubGeneratorKnobs.cpp  moc_SubGeneratorKnobs.cpp.d  moc_SynthesizerControl.cpp  moc_SynthesizerControl.cpp.d
resources/json/: defaultTheme.json
resources/translations/: lang_en.ts
src/: ApplicationConfig.cpp  ApplicationConfig.h  AudioSettings.cpp  AudioSettings.h  MixerOutput.cpp  MixerOutput.h  MixerQmlWrapper.cpp  MixerQmlWrapper.h
src/ADSR/: ADSREnvelope.cpp  ADSREnvelope.h
src/Effects/: Chorus.cpp  Chorus.h  Compressor.cpp  Compressor.h  Delay.cpp  Delay.h  Distortion.cpp  Distortion.h  Effect.h  Effects.h  Flanger.cpp  Flanger.h  ParametricEQ.cpp  ParametricEQ.h  Phaser.cpp  Phaser.h  Reverb.cpp  Reverb.h  Vibrato.cpp  Vibrato.h
src/Generator/: AGenerator.cpp  AGenerator.h  BasicSynthesizer.cpp  BasicSynthesizer.h  Generator.cpp  Generator.h  GeneratorsThreadPool.cpp  GeneratorsThreadPool.h  Note.cpp  Note.h  SubGenerator.cpp  SubGenerator.h  Synthesizer.cpp  Synthesizer.h  Synthesizer.tpp  WaveTable.cpp  WaveTable.h
src/MIDI/: MidiEvent.h  MidiFile.cpp  MidiFile.h  MidiNote.h  MidiPlayback.cpp  MidiPlayback.h  MidiTrack.h
src/Parametrs/: AValueSender.cpp  AValueSender.h  ChangeableParameter.cpp  ChangeableParameter.h  ChangeableParameter.tpp
src/UI/Charts/: ADSRDrawer.cpp  ADSRDrawer.h  ADataReceiver.cpp  ADataReceiver.h  ArrayDrawer.cpp  ArrayDrawer.h  ArrayGradientDrawer.cpp  ArrayGradientDrawer.h  LinearIndicator.cpp  LinearIndicator.h  PolarVectorscope.cpp  PolarVectorscope.h
src/UI/Controls/: AKnob.cpp  AKnob.h  KeyboardControl.cpp  KeyboardControl.h  Knob.cpp  Knob.h  TextKnob.cpp  TextKnob.h
src/UI/Effects/: ChorusUIWrapper.cpp  ChorusUIWrapper.h  CompressorUIWrapper.cpp  CompressorUIWrapper.h  DelayUIWrapper.cpp  DelayUIWrapper.h  DistortionUIWrapper.cpp  DistortionUIWrapper.h  EffectUIWrapper.cpp  EffectUIWrapper.h  EqUIWrapper.cpp  EqUIWrapper.h  FlangerUIWrapper.cpp  FlangerUIWrapper.h  PhaserUIWrapper.cpp  PhaserUIWrapper.h  ReverbUIWrapper.cpp  ReverbUIWrapper.h  VibratoUIWrapper.cpp  VibratoUIWrapper.h
src/UI/Midi/: MidiPlaybackUI.cpp  MidiPlaybackUI.h
src/UI/Prefabs/: AbstractKnob.qml  ColorScheme.qml  FlowHint.qml  MidiPlaybackView.qml  Osc2.qml  OscBlock.qml  OscRectangleBlock.qml  OutputWaveView.qml  ScaleControl.qml  qmldir
src/UI/SynthesizerControls/: ADSRController.cpp  ADSRController.h  AGeneratorControl.cpp  AGeneratorControl.h  GeneratorControl.cpp  GeneratorControl.h  GeneratorKnobsControl.cpp  (+9 more)
src/Utils/: ApplicationConfigQML.cpp  ApplicationConfigQML.h  AudioChannel.cpp  AudioChannel.h  AudioFile.h  BezierCurve.cpp  BezierCurve.h  CubicBezierCurve.cpp  CubicBezierCurve.h  ITimeReceiver.cpp  ITimeReceiver.h  LFO.cpp  LFO.h  MinMax.h  WaveShape.cpp  WaveShape.h
(+42 files in other folders)
